--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
             #first{
                 color: green;
             }
-            a[href="https://facebook.com"]{
+            #second{
                 color: blue;
             }
             ul > li{
                 color: orange;
                 text-align: center;
+                list-style-type: none;
             } 
             h1{
 
@@ -24,7 +25,7 @@
         <h1> A site for useful links! </h1>
         <ul>
             <li><a id="first" href="https://google.com">Google</a></a></li>
-            <li><a href="https://facebook.com">Facebook</a></a></li>
+            <li><a id= "second" href="https://facebook.com">Facebook</a></a></li>
             <li><a href="https://amazon.com">Amazon</a></a></li>
         </ul>
     </body>
