modified:   index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
             #second{
                 color: blue;
             }
-            ul > li{
+
+            #third{
                 color: orange;
+            }
+            
+            ul > li{
+    
                 text-align: center;
                 list-style-type: none;
             } 
@@ -26,7 +31,7 @@
         <ul>
             <li><a id="first" href="https://google.com">Google</a></a></li>
             <li><a id= "second" href="https://facebook.com">Facebook</a></a></li>
-            <li><a href="https://amazon.com">Amazon</a></a></li>
+            <li><a id= "thrid" href="https://amazon.com">Amazon</a></a></li>
         </ul>
     </body>
 
