modified:   index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             #third{
                 color: orange;
             }
-            
+
             ul > li{
     
                 text-align: center;
@@ -31,7 +31,7 @@
         <ul>
             <li><a id="first" href="https://google.com">Google</a></a></li>
             <li><a id= "second" href="https://facebook.com">Facebook</a></a></li>
-            <li><a id= "thrid" href="https://amazon.com">Amazon</a></a></li>
+            <li><a id= "third" href="https://amazon.com">Amazon</a></a></li>
         </ul>
     </body>
 
