--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                 color: green;
             }
             #second{
-                color: blue;
+                color: red;
             }
 
             #third{
